--- a/main.html
+++ b/main.html
@@ -7,7 +7,15 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<form>
+        <label><input type="radio" name="group" value="1"> Option 1</label><br>
+        <label><input type="radio" name="group" value="2" disabled> Option 2 (Disabled)</label><br>
+        <label><input type="radio" name="group" value="3" checked> Option 3 (Default Selected)</label><br>
+        <label><input type="radio" name="group" value="4"> Option 4</label><br>
+        <label><input type="radio" name="group" value="5"> Option 5</label><br>
+        <label><input type="radio" name="group" value="6"> Option 6</label><br>
+    </form>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
