--- a/main.html
+++ b/main.html
@@ -8,13 +8,14 @@
 
 <body>
 	<form>
-        <label><input type="radio" name="group" value="1"> Option 1</label><br>
-        <label><input type="radio" name="group" value="2" disabled> Option 2 (Disabled)</label><br>
-        <label><input type="radio" name="group" value="3" checked> Option 3 (Default Selected)</label><br>
-        <label><input type="radio" name="group" value="4"> Option 4</label><br>
-        <label><input type="radio" name="group" value="5"> Option 5</label><br>
-        <label><input type="radio" name="group" value="6"> Option 6</label><br>
-    </form>
+    <label><input type="radio" name="options" value="1"> Option 1</label><br>
+    <label><input type="radio" name="options" value="2" disabled class="input"> Option 2</label><br>
+    <label><input type="radio" name="options" value="3" checked> Option 3</label><br>
+    <label><input type="radio" name="options" value="4" class="input"> Option 4</label><br>
+    <label><input type="radio" name="options" value="5"> Option 5</label><br>
+    <label><input type="radio" name="options" value="6" class="input"> Option 6</label>
+  </form>
+
 
     <script type="text/javascript" src="./script.js">
 </script>
